Update: Pandas Dataframe

--- a/Python/python_basics.ipynb
+++ b/Python/python_basics.ipynb
@@ -1834,10 +1834,13 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "###### Pandas DataFrame is a two-dimensional, labeled data structure similar to a table in a database, a spreadsheet, or a dictionary of Series objects"
+    "#  Pandas series is like a single column of data. It has only one column and index.\n",
+    "#  Pandas DataFrame is like a table with rows and columns. It has two dimensions and an index."
    ]
   },
   {
@@ -1859,6 +1862,7 @@
     }
    ],
    "source": [
+    "# Pandas DataFrame is a two-dimensional, labeled data structure similar to a table in a database, a spreadsheet, or a dictionary of Series objects\n",
     "colors = ['red', 'blue', 'green', 'yellow', 'black']\n",
     "degrees = [12, 23, 34, 45, 56]\n",
     "numbers = [1, 2, 3, 4, 5]\n",
@@ -1868,6 +1872,77 @@
     "new_df = pd.DataFrame({'Colors': colors, 'Degrees': degrees, 'Numbers': numbers},\n",
     "                      index=range(1, 6))\n",
     "print(new_df)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Appended DataFrame:\n",
+      "   Colors  Degrees  Numbers\n",
+      "0     red       12        1\n",
+      "1    blue       23        2\n",
+      "2   green       34        3\n",
+      "3  yellow       45        4\n",
+      "4   black       56        5\n",
+      "5  purple       67        6\n",
+      "6  orange       78        7\n",
+      "\n",
+      "Final DataFrame:\n",
+      "   Colors  Degrees  Numbers  PatientID   Age     Diagnosis\n",
+      "0     red     12.0      1.0        NaN   NaN           NaN\n",
+      "1    blue     23.0      2.0        NaN   NaN           NaN\n",
+      "2   green     34.0      3.0        NaN   NaN           NaN\n",
+      "3  yellow     45.0      4.0        NaN   NaN           NaN\n",
+      "4   black     56.0      5.0        NaN   NaN           NaN\n",
+      "5  purple     67.0      6.0        NaN   NaN           NaN\n",
+      "6  orange     78.0      7.0        NaN   NaN           NaN\n",
+      "7     NaN      NaN      NaN      101.0  45.0  Hypertension\n",
+      "8     NaN      NaN      NaN      102.0  50.0      Diabetes\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Create the first DataFrame\n",
+    "new_df = pd.DataFrame({\n",
+    "    'Colors': ['red', 'blue', 'green', 'yellow', 'black'],\n",
+    "    'Degrees': [12, 23, 34, 45, 56],\n",
+    "    'Numbers': [1, 2, 3, 4, 5]\n",
+    "})\n",
+    "\n",
+    "# Create a new DataFrame to append\n",
+    "new_data = {\n",
+    "    'Colors': ['purple', 'orange'],\n",
+    "    'Degrees': [67, 78],\n",
+    "    'Numbers': [6, 7]\n",
+    "}\n",
+    "new_df2 = pd.DataFrame(new_data)\n",
+    "\n",
+    "# Append using pd.concat()\n",
+    "appended_df = pd.concat([new_df, new_df2], ignore_index=True)\n",
+    "print(\"\\nAppended DataFrame:\")\n",
+    "print(appended_df)\n",
+    "\n",
+    "# Create a new DataFrame with medical data\n",
+    "medical_data = {\n",
+    "    'PatientID': [101, 102],\n",
+    "    'Age': [45, 50],\n",
+    "    'Diagnosis': ['Hypertension', 'Diabetes']\n",
+    "}\n",
+    "medical_df = pd.DataFrame(medical_data)\n",
+    "\n",
+    "# Append the medical DataFrame (columns don't match, so NaNs will appear)\n",
+    "final_df = pd.concat([appended_df, medical_df], ignore_index=True)\n",
+    "print(\"\\nFinal DataFrame:\")\n",
+    "print(final_df)\n"
    ]
   },
   {
