--- a/Python/python_basics.ipynb
+++ b/Python/python_basics.ipynb
@@ -3354,6 +3354,148 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 262 entries, 0 to 261\n",
+      "Data columns (total 5 columns):\n",
+      " #   Column            Non-Null Count  Dtype  \n",
+      "---  ------            --------------  -----  \n",
+      " 0   Country           262 non-null    object \n",
+      " 1   Total_area        262 non-null    float64\n",
+      " 2   Land_area         253 non-null    float64\n",
+      " 3   Water_area        253 non-null    float64\n",
+      " 4   Water_percentage  253 non-null    float64\n",
+      "dtypes: float64(4), object(1)\n",
+      "memory usage: 10.4+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Total_area</th>\n",
+       "      <th>Land_area</th>\n",
+       "      <th>Water_area</th>\n",
+       "      <th>Water_percentage</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>2.620000e+02</td>\n",
+       "      <td>2.530000e+02</td>\n",
+       "      <td>253.000000</td>\n",
+       "      <td>253.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>5.323232e+05</td>\n",
+       "      <td>5.311727e+05</td>\n",
+       "      <td>16753.924901</td>\n",
+       "      <td>2.499209</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>1.677945e+06</td>\n",
+       "      <td>1.639126e+06</td>\n",
+       "      <td>80708.866464</td>\n",
+       "      <td>5.589382</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>4.900000e-01</td>\n",
+       "      <td>4.900000e-01</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>7.862500e+02</td>\n",
+       "      <td>8.110000e+02</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>5.390150e+04</td>\n",
+       "      <td>6.186000e+04</td>\n",
+       "      <td>440.000000</td>\n",
+       "      <td>0.700000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>3.536858e+05</td>\n",
+       "      <td>3.644850e+05</td>\n",
+       "      <td>6080.000000</td>\n",
+       "      <td>2.600000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>1.709825e+07</td>\n",
+       "      <td>1.637687e+07</td>\n",
+       "      <td>891163.000000</td>\n",
+       "      <td>66.700000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Total_area     Land_area     Water_area  Water_percentage\n",
+       "count  2.620000e+02  2.530000e+02     253.000000        253.000000\n",
+       "mean   5.323232e+05  5.311727e+05   16753.924901          2.499209\n",
+       "std    1.677945e+06  1.639126e+06   80708.866464          5.589382\n",
+       "min    4.900000e-01  4.900000e-01       0.000000          0.000000\n",
+       "25%    7.862500e+02  8.110000e+02       0.000000          0.000000\n",
+       "50%    5.390150e+04  6.186000e+04     440.000000          0.700000\n",
+       "75%    3.536858e+05  3.644850e+05    6080.000000          2.600000\n",
+       "max    1.709825e+07  1.637687e+07  891163.000000         66.700000"
+      ]
+     },
+     "execution_count": 134,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
