Update: Data cleaning

--- a/Python/python_basics.ipynb
+++ b/Python/python_basics.ipynb
@@ -3496,6 +3496,103 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 135,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Country', 'Total_area', 'Land_area', 'Water_area', 'Water_percentage'], dtype='object')"
+      ]
+     },
+     "execution_count": 135,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Country             0\n",
+       "Total_area          0\n",
+       "Land_area           9\n",
+       "Water_area          9\n",
+       "Water_percentage    9\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 136,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check for any missing values\n",
+    "df.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Country             0\n",
+       "Total_area          0\n",
+       "Land_area           0\n",
+       "Water_area          0\n",
+       "Water_percentage    0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 137,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Fill missing values with the mean\n",
+    "df['Land_area'] = df['Land_area'].fillna(df['Land_area'].mean())\n",
+    "df['Water_area'] = df['Water_area'].fillna(df['Water_area'].mean())\n",
+    "df['Water_percentage'] = df['Water_percentage'].fillna(df['Water_percentage'].mean())\n",
+    "\n",
+    "df.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 138,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check duplicates\n",
+    "df.duplicated().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
