--- a/Python_for_data_science/notebook.ipynb
+++ b/Python_for_data_science/notebook.ipynb
@@ -1298,6 +1298,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    0.412327\n",
+       "1    0.405270\n",
+       "2    0.327644\n",
+       "3    0.408799\n",
+       "4    0.401742\n",
+       "5    0.310002\n",
+       "6    2.265784\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Dealing with outliers\n",
+    "x = pd.Series([2.1, 2.3, 4.5, 2.2, 2.4, 5, 78])\n",
+    "mean = x.mean()\n",
+    "std = x.std()\n",
+    "z_score = abs((x - mean) / std)\n",
+    "z_score"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
