--- a/Python_for_data_science/notebook.ipynb
+++ b/Python_for_data_science/notebook.ipynb
@@ -1298,7 +1298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1320,7 +1320,7 @@
     }
    ],
    "source": [
-    "# Dealing with outliers\n",
+    "# Detecting with outliers\n",
     "x = pd.Series([2.1, 2.3, 4.5, 2.2, 2.4, 5, 78])\n",
     "mean = x.mean()\n",
     "std = x.std()\n",
