--- a/Python_for_data_science/notebook.ipynb
+++ b/Python_for_data_science/notebook.ipynb
@@ -4593,7 +4593,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# split data\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=0)"
+   ]
   }
  ],
  "metadata": {
