--- a/Python_for_data_science/notebook.ipynb
+++ b/Python_for_data_science/notebook.ipynb
@@ -4747,6 +4747,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9137.9901527941"
+      ]
+     },
+     "execution_count": 130,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Measure the accuracy of our regression model\n",
+    "# Mean Absolute Error (MAE) - average of the absolute differences between predictions and actual values\n",
+    "# Mean Squared Error (MSE) - average of the squared differences between predictions and actual values\n",
+    "# Root Mean Squared Error (RMSE) - square root of the average of the squared differences between predictions and actual values\n",
+    "\n",
+    "# Root mean squared error\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "rmse = np.sqrt(mean_squared_error(y_test, y_pred))\n",
+    "rmse\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
