--- a/Python_for_data_science/classification.ipynb
+++ b/Python_for_data_science/classification.ipynb
@@ -1096,14 +1096,122 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "#### 📝 Model Evaluation Summary\n",
+    "\n",
+    "#### 📊 Confusion Matrix\n",
+    "| Actual / Predicted | Predicted 0 (Negative) | Predicted 1 (Positive) |\n",
+    "|--------------------|------------------|------------------|\n",
+    "| **Actual 0 (Negative)** | **64** (✅ True Negative) | **4** (❌ False Positive) |\n",
+    "| **Actual 1 (Positive)** | **3** (❌ False Negative) | **29** (✅ True Positive) |\n",
+    "\n",
+    "#### 📈 Performance Metrics\n",
+    "| **Metric**  | **Value**  | **Interpretation** |\n",
+    "|------------|-----------|------------------|\n",
+    "| **Accuracy** | **93.0%** ✅ | Overall model performance |\n",
+    "| **Precision** | **87.9%** ✅ | Low false positives (reliable positive predictions) |\n",
+    "| **Recall** | **90.6%** ✅ | Most positives detected (low false negatives) |\n",
+    "| **F1-Score** | **89.2%** ✅ | Balance between precision & recall |\n",
+    "\n",
+    "#### 🔍 Key Takeaways\n",
+    "- ✅ **High Accuracy (93%)** – Model performs well overall.\n",
+    "- ✅ **Good Precision (87.9%)** – Low false positives.\n",
+    "- ✅ **Good Recall (90.6%)** – Most actual positives identified.\n",
+    "- ⚠ **Trade-off**:\n",
+    "  - If minimizing **false negatives** is important → Focus on **recall**.\n",
+    "  - If reducing **false positives** is critical → Improve **precision**.\n",
+    "\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 93.00%\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Accuracy\n",
+    "accuracy = (64 + 29) / (64 + 3 + 4 + 29)\n",
+    "print(f\"Accuracy: {accuracy:.2%}\")  # 93.0%\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precision: 87.88%\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Precision\n",
+    "precision = 29 / (29 + 4)\n",
+    "print(f\"Precision: {precision:.2%}\")  # 87.9%\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Recall: 90.62%\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Recall (did we catch all actual positives)\n",
+    "recall = 29 / (29 + 3)\n",
+    "print(f\"Recall: {recall:.2%}\")  # 90.6%\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "F1 Score: 89.23%\n"
+     ]
+    }
+   ],
+   "source": [
+    "# F1-Score (Harmonic Mean of Precision & Recall)\n",
+    "from sklearn.metrics import f1_score\n",
+    "\n",
+    "f1 = f1_score(y_test, y_pred)\n",
+    "print(f\"F1 Score: {f1:.2%}\")  # 89.2%\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Final Insights:\n",
+    "- High accuracy (93%) → The model is generally performing well.\n",
+    "- Good precision (87.9%) → Few false positives.\n",
+    "- Good recall (90.6%) → Most positives were detected.\n",
+    "- Trade-off: If you need fewer false negatives, focus on recall. If you want fewer false positives, focus on precision."
+   ]
   }
  ],
  "metadata": {
