Intro to Decision trees

--- a/Python_for_data_science/decision_tree.ipynb
+++ b/Python_for_data_science/decision_tree.ipynb
@@ -15,6 +15,12 @@
     "- Data segmenting depends upon the best attribute\n",
     "- Repeat\n",
     "\n",
+    "#### Entropy\n",
+    "It is measure the amount of uncertainty or randomness in data\n",
+    "- Low value (0) -> no randomness\n",
+    "- High value(1) -> High randomness [decision tree uses the one with high entropy]\n",
+    "\n",
+    "\n",
     "\n",
     "\n"
    ]
