--- a/Python_for_data_science/decision_tree.ipynb
+++ b/Python_for_data_science/decision_tree.ipynb
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -525,6 +525,7 @@
     }
    ],
    "source": [
+    "#  convert categorical text values into numerical labels for the \"company\", \"job\", and \"degree\" columns\n",
     "from sklearn import preprocessing\n",
     "label_encoder = preprocessing.LabelEncoder()\n",
     "# encode labels in column\n",
