Train and make predictions

--- a/Python_for_data_science/decision_tree.ipynb
+++ b/Python_for_data_science/decision_tree.ipynb
@@ -841,6 +841,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create decision tree classifier object using entropy\n",
+    "clf_entropy = DecisionTreeClassifier(criterion=\"entropy\", max_depth=3)\n",
+    "# Train decision tree classifier\n",
+    "clf_entropy = clf_entropy.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# predict\n",
+    "y_pred = clf_entropy.predict(X_test)\n",
+    "print(f\"Accuracy: {metrics.accuracy_score(y_test, y_pred)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
