--- a/Python_for_data_science/logistic_regression.ipynb
+++ b/Python_for_data_science/logistic_regression.ipynb
@@ -602,6 +602,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# preprocessing\n",
+    "# standardizes (normalizes) the training and test sets using StandardScaler\n",
+    "# This makes all features follow a standard normal distribution (mean 0, standard deviation 1).\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "sc_X = StandardScaler()\n",
+    "X_train = sc_X.fit_transform(X_train)\n",
+    "X_test = sc_X.fit_transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
