Linear vs Logistic regression

--- a/Python_for_data_science/logistic_regression.ipynb
+++ b/Python_for_data_science/logistic_regression.ipynb
@@ -1127,7 +1127,12 @@
    "source": [
     "From the confusion matrix:\n",
     " - Correct predictions = 68 + 32 = 100\n",
-    " - Incorrect predictions = 0"
+    " - Incorrect predictions = 0\n",
+    "\n",
+    " * Accuracy = (TP + TN)/ (TP + TN + FP + FN)\n",
+    " * Precision = TP / (TP + FP)\n",
+    " * Recall = TP / (TP + FN)\n",
+    " * F1_SCORE = 2 * (Precison * Recall)/ (Precision + Recall)"
    ]
   },
   {
@@ -1149,6 +1154,27 @@
    "source": [
     "sns.heatmap(cm)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Logistical regression vs Linear regression\n",
+    "Logistical regression:\n",
+    "* We estimate the values of categorical variables\n",
+    "* We discover S Curve  and use it to categorize the samples (use sigmoid curve)\n",
+    "* Not necessary to have linear connection between dependent and independent variables\n",
+    "* No collinearity between the independent variables\n",
+    "\n",
+    "Linear regression:\n",
+    "* We estimate the outcomes of continous variables\n",
+    "* Here we have best fit line to predict the outcome with ease\n",
+    "* Necessary for connection between dependent and independent variables to be linear\n",
+    "* There is a possibility of collinearity between the independent factors in linear regression\n",
+    "\n",
+    "Similarity: Both can be used for regression\n",
+    "\n"
    ]
   },
   {
