Implementing K-means clustering

--- a/Python_for_data_science/clustering.ipynb
+++ b/Python_for_data_science/clustering.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -88,13 +88,17 @@
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from mpl_toolkits.mplot3d import Axes3D\n",
+    "from mpl_toolkits.mplot3d import Axes3D # 3d plotting tool\n",
     "from sklearn.cluster import KMeans\n",
-    "from sklearn.datasets import make_blobs\n",
+    "from sklearn.datasets import make_blobs # generate synthetic clustered data\n",
     "\n",
-    "plt.rcParams['figure.figsize'] = (16,9)\n",
-    "# create sample dataset with 4 clusters\n",
-    "X,y = make_blobs(n_samples=800, n_features=3, centers=4)\n",
+    "plt.rcParams['figure.figsize'] = (16,9) # plt.rcParams modifies global Matplotlib settings.\n",
+    "# Generate Synthetic Dataset with 4 Clusters\n",
+    "X,y = make_blobs(n_samples=800, n_features=3, centers=4) \n",
+    "# make_blobs() creates a random dataset with multiple clusters.\n",
+    "# n_samples=800 → 800 data points will be generated.\n",
+    "# n_features=3 → Each data point has 3 features (for 3D plotting).\n",
+    "# centers=4 → The dataset contains 4 clusters.\n",
     "X\n"
    ]
   },
