Implementing K-means clustering

--- a/Python_for_data_science/clustering.ipynb
+++ b/Python_for_data_science/clustering.ipynb
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -678,7 +678,7 @@
     }
    ],
    "source": [
-    "X = np.array(list(zip(f1,f2)))\n",
+    "X = np.array(list(zip(f1,f2))) # f1 -> x axis, f2 -> y axis, s=20 -> size of the points\n",
     "X"
    ]
   },
