--- a/Python_for_data_science/Recommeder_system.ipynb
+++ b/Python_for_data_science/Recommeder_system.ipynb
@@ -348,6 +348,58 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "title\n",
+       "Star Wars (1977)             584\n",
+       "Contact (1997)               509\n",
+       "Fargo (1996)                 508\n",
+       "Return of the Jedi (1983)    507\n",
+       "Liar Liar (1997)             485\n",
+       "Name: rating, dtype: int64"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.groupby('title')['rating'].count().sort_values(ascending=False).head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "title\n",
+       "They Made Me a Criminal (1939)                5.0\n",
+       "Marlene Dietrich: Shadow and Light (1996)     5.0\n",
+       "Saint of Fort Washington, The (1993)          5.0\n",
+       "Someone Else's America (1995)                 5.0\n",
+       "Star Kid (1997)                               5.0\n",
+       "Name: rating, dtype: float64"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.groupby('title')['rating'].mean().sort_values(ascending=False).head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
