Recommendation system - Correlation

--- a/Python_for_data_science/Recommeder_system.ipynb
+++ b/Python_for_data_science/Recommeder_system.ipynb
@@ -921,6 +921,257 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>rating</th>\n",
+       "      <th>num of ratings</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>title</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Star Wars (1977)</th>\n",
+       "      <td>4.359589</td>\n",
+       "      <td>584</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Contact (1997)</th>\n",
+       "      <td>3.803536</td>\n",
+       "      <td>509</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Fargo (1996)</th>\n",
+       "      <td>4.155512</td>\n",
+       "      <td>508</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Return of the Jedi (1983)</th>\n",
+       "      <td>4.007890</td>\n",
+       "      <td>507</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Liar Liar (1997)</th>\n",
+       "      <td>3.156701</td>\n",
+       "      <td>485</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>English Patient, The (1996)</th>\n",
+       "      <td>3.656965</td>\n",
+       "      <td>481</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Scream (1996)</th>\n",
+       "      <td>3.441423</td>\n",
+       "      <td>478</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Toy Story (1995)</th>\n",
+       "      <td>3.878319</td>\n",
+       "      <td>452</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Air Force One (1997)</th>\n",
+       "      <td>3.631090</td>\n",
+       "      <td>431</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Independence Day (ID4) (1996)</th>\n",
+       "      <td>3.438228</td>\n",
+       "      <td>429</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                 rating  num of ratings\n",
+       "title                                                  \n",
+       "Star Wars (1977)               4.359589             584\n",
+       "Contact (1997)                 3.803536             509\n",
+       "Fargo (1996)                   4.155512             508\n",
+       "Return of the Jedi (1983)      4.007890             507\n",
+       "Liar Liar (1997)               3.156701             485\n",
+       "English Patient, The (1996)    3.656965             481\n",
+       "Scream (1996)                  3.441423             478\n",
+       "Toy Story (1995)               3.878319             452\n",
+       "Air Force One (1997)           3.631090             431\n",
+       "Independence Day (ID4) (1996)  3.438228             429"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# most rated movies\n",
+    "ratings.sort_values('num of ratings', ascending=False).head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "user_id\n",
+       "0      5.0\n",
+       "1      5.0\n",
+       "2      5.0\n",
+       "3      NaN\n",
+       "4      5.0\n",
+       "      ... \n",
+       "939    NaN\n",
+       "940    4.0\n",
+       "941    NaN\n",
+       "942    5.0\n",
+       "943    4.0\n",
+       "Name: Star Wars (1977), Length: 944, dtype: float64"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# grabbing ratings for two movies\n",
+    "starwars_user_ratings = movie_mat['Star Wars (1977)']\n",
+    "liar_liar_user_ratings = movie_mat['Liar Liar (1997)']\n",
+    "starwars_user_ratings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/wanyua/Dev/Python-Machine-Learning-Tutorial/env/lib/python3.8/site-packages/numpy/lib/function_base.py:2846: RuntimeWarning: Degrees of freedom <= 0 for slice\n",
+      "  c = cov(x, y, rowvar, dtype=dtype)\n",
+      "/home/wanyua/Dev/Python-Machine-Learning-Tutorial/env/lib/python3.8/site-packages/numpy/lib/function_base.py:2705: RuntimeWarning: divide by zero encountered in divide\n",
+      "  c *= np.true_divide(1, fact)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# correlation between most rated movies\n",
+    "similar_to_starwars = movie_mat.corrwith(starwars_user_ratings)\n",
+    "similar_to_liar_liar = movie_mat.corrwith(liar_liar_user_ratings)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Correlation</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>title</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>'Til There Was You (1997)</th>\n",
+       "      <td>0.872872</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1-900 (1994)</th>\n",
+       "      <td>-0.645497</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>101 Dalmatians (1996)</th>\n",
+       "      <td>0.211132</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12 Angry Men (1957)</th>\n",
+       "      <td>0.184289</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>187 (1997)</th>\n",
+       "      <td>0.027398</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                           Correlation\n",
+       "title                                 \n",
+       "'Til There Was You (1997)     0.872872\n",
+       "1-900 (1994)                 -0.645497\n",
+       "101 Dalmatians (1996)         0.211132\n",
+       "12 Angry Men (1957)           0.184289\n",
+       "187 (1997)                    0.027398"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "corr_starwars = pd.DataFrame(similar_to_starwars, columns=['Correlation'])\n",
+    "corr_starwars.dropna(inplace=True)\n",
+    "corr_starwars.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
