Recommendation system - Correlation

--- a/Python_for_data_science/Recommeder_system.ipynb
+++ b/Python_for_data_science/Recommeder_system.ipynb
@@ -1453,6 +1453,93 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Correlation</th>\n",
+       "      <th>num of ratings</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>title</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Liar Liar (1997)</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>485</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Batman Forever (1995)</th>\n",
+       "      <td>0.516968</td>\n",
+       "      <td>114</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Mask, The (1994)</th>\n",
+       "      <td>0.484650</td>\n",
+       "      <td>129</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Down Periscope (1996)</th>\n",
+       "      <td>0.472681</td>\n",
+       "      <td>101</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Con Air (1997)</th>\n",
+       "      <td>0.469828</td>\n",
+       "      <td>137</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       Correlation  num of ratings\n",
+       "title                                             \n",
+       "Liar Liar (1997)          1.000000             485\n",
+       "Batman Forever (1995)     0.516968             114\n",
+       "Mask, The (1994)          0.484650             129\n",
+       "Down Periscope (1996)     0.472681             101\n",
+       "Con Air (1997)            0.469828             137"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "corr_liar_liar = pd.DataFrame(similar_to_liar_liar, columns=['Correlation'])\n",
+    "corr_liar_liar.dropna(inplace=True)\n",
+    "corr_liar_liar = corr_liar_liar.join(ratings['num of ratings'])\n",
+    "corr_liar_liar[corr_liar_liar['num of ratings']> 100].sort_values('Correlation', ascending=False).head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
