--- a/Python_for_data_science/python.ipynb
+++ b/Python_for_data_science/python.ipynb
@@ -345,13 +345,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "abe702d4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Binary files\n"
+    "# Binary files\n",
+    "# writing to a binary file\n",
+    "data = b'\\x00\\x01\\x02\\x03\\x04'\n",
+    "with open('example.bin', 'wb') as file:\n",
+    "    file.write(data)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "924ef713",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
