--- a/Python_for_data_science/python.ipynb
+++ b/Python_for_data_science/python.ipynb
@@ -359,8 +359,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "924ef713",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b'\\x00\\x01\\x02\\x03\\x04'\n"
+     ]
+    }
+   ],
+   "source": [
+    "# read binary file\n",
+    "with open('example.bin', 'rb') as file:\n",
+    "    content = file.read()\n",
+    "    print(content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b75965ea",
    "metadata": {},
    "outputs": [],
    "source": []
