--- a/Python_for_data_science/python.ipynb
+++ b/Python_for_data_science/python.ipynb
@@ -380,8 +380,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "b75965ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('example.txt', 'r') as source_file:\n",
+    "    content = source_file.read()\n",
+    "\n",
+    "with open('destination.txt', 'w') as destination_file:\n",
+    "    destination_file.write(content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "05f82286",
    "metadata": {},
    "outputs": [],
    "source": []
