--- a/Python_for_data_science/python.ipynb
+++ b/Python_for_data_science/python.ipynb
@@ -394,8 +394,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "05f82286",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "lines: 3, words: 21, characters: 125\n"
+     ]
+    }
+   ],
+   "source": [
+    "# read a text fiel and count the nuber of lines, words and characters\n",
+    "def count_text_file(file_path):\n",
+    "    with open(file_path, 'r') as file:\n",
+    "        lines = file.readlines()\n",
+    "        line_count = len(lines)\n",
+    "        word_count = sum(len(line.split()) for line in lines)\n",
+    "        char_count = sum(len(line) for line in lines)\n",
+    "    return line_count, word_count, char_count\n",
+    "\n",
+    "file_path = 'example.txt'\n",
+    "lines, words, characters = count_text_file(file_path)\n",
+    "print(f'lines: {lines}, words: {words}, characters: {characters}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b85678d7",
    "metadata": {},
    "outputs": [],
    "source": []
